SUBDIRS = \
	walk

MAINTAINERCLEANFILES = \
	Makefile.in

EXTRA_DIST = \
	about_dialog.sif \
	backdrop.sif \
	business_card.sif \
	candy.sif \
	cells.sif \
	eye.sif \
	eyes.sif \
	gamma.sif \
	gradient.sif \
	headmo.sif \
	installer-logo.sif \
	japan.sif \
	logo.sif \
	macwolfen.sif \
	Makefile.am \
	mandelbrot.sif \
	newjulia.sif \
	newjulia2.sif \
	noise.sif \
	pirates.sif \
	preambletaffy.sif \
	prologue_kid.sif \
	sparkle.sif \
	splat.sif \
	star.sif \
	wallpaper.sif \
	warpcube.sif \
	warptext.sif \
	z_depth_test.sif
